force-app/main/default/objects/MUSW__Automation_Result__c/MUSW__Automation_Result__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Automation Rule Result outcomes</description>
    <label>Automation Result</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>