force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Automation_Rule__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Automation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automation Rule</label>
    <referenceTo>MUSW__Automation_Rule__c</referenceTo>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>