force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Expression__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Expression__c</fullName>
    <description>javascript function name and contents. eg. function asdf(var1) { ...return var2; }</description>
    <label>Expression</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>