force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Field__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Field__c</fullName>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>