force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Group_Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Group_Order__c</fullName>
    <formula>If(MUSW__Group__c >9, text(MUSW__Group__c),"0" &amp;text(MUSW__Group__c)) &amp; " - "&amp; If(MUSW__Order__c >9, text(MUSW__Order__c),"0" &amp;text(MUSW__Order__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group-Order</label>
    <type>Text</type>
</CustomField>