force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Table__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Table__c</fullName>
    <label>Table</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>MUSW__Application2__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Complaint2__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Condition__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Fee__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Inspection__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Inspection_Violation__c</fullName>
            </value>
            <value>
                <fullName>MUSW__License2__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Milestone__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Parcel__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Permit2__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Project2__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Review__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Submission__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Work_Item__c</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>