force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Transform__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Transform__c</fullName>
    <inlineHelpText>eg. &lt;repeat>MUSW__Fee__c&lt;/repeat></inlineHelpText>
    <label>Transform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>