force-app/main/default/objects/MUSW__Automation_Result__c/fields/MUSW__Value__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Value__c</fullName>
    <label>Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>